--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,46 +1,23 @@
-name: build
+name: Test
 
 on: [push, pull_request]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.7", "3.8"]
-
+        python-version: [3.6, 3.7, 3.8, 3.9]
     steps:
-    - uses: actions/checkout@v2.4.0
+    - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2.3.2
+      uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-
-    - name: Install poetry
-      run: make download-poetry
-
-    - name: Set up cache
-      uses: actions/cache@v2.1.7
-      with:
-        path: .venv
-        key: venv-${{ matrix.python-version }}-${{ hashFiles('pyproject.toml') }}-${{ hashFiles('poetry.lock') }}
+        cache: pip
     - name: Install dependencies
       run: |
-        source "$HOME/.poetry/env"
-        poetry config virtualenvs.in-project true
-        poetry install
-
-    - name: Run safety checks
-      run: |
-        source "$HOME/.poetry/env"
-        STRICT=1 make check-safety
-
-    - name: Run style checks
-      run: |
-        source "$HOME/.poetry/env"
-        STRICT=1 make check-style
-
+        pip install -e '.[test]'
     - name: Run tests
       run: |
-        source "$HOME/.poetry/env"
-        make test
+        pytest
