--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .env
-
+examples/*.png
 
 # Created by https://www.gitignore.io/api/osx,python,pycharm,windows,visualstudio,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=osx,python,pycharm,windows,visualstudio,visualstudiocode
