--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,37 +19,32 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Install poetry
-      run: make download-poetry
+      run: |
+        make download-poetry
 
     - name: Set up cache
       uses: actions/cache@v3.2.3
       with:
         path: .venv
         key: venv-${{ matrix.python-version }}-${{ hashFiles('pyproject.toml') }}-${{ hashFiles('poetry.lock') }}
+
     - name: Install dependencies
       run: |
-        source "$HOME/.poetry/env"
         poetry config virtualenvs.in-project true
         poetry install
 
     - name: Run safety checks
       run: |
-        source "$HOME/.poetry/env"
-        STRICT=1 make check-safety
+        make check-safety
 
     - name: Run style checks
       run: |
-        source "$HOME/.poetry/env"
-        STRICT=1 make check-style
+        make check-style
 
     - name: Run tests
       run: |
-        source "$HOME/.poetry/env"
         make test
 
     - name: Publish to PyPI
       run: |
-        make download-poetry 
-        source "$HOME/.poetry/env"
-        poetry config virtualenvs.in-project true
         poetry publish --build --username ${{ secrets.PYPI_USERNAME }} --password ${{ secrets.PYPI_PASSWORD }}
