--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,6 @@ rich = ">=13.3.3,<14.0.0"
 requests = "^2.28.2"
 ipython = ">=8.12.0,<9.0.0"
 pandas = ">=1.5,<2.0.0"
-pytest-cov = "^4.0.0"
 
 [tool.poetry.dev-dependencies]
 darglint = "^1.8.0"
@@ -51,6 +50,8 @@ pytest = "^7.2.2"
 pylint = "^2.17.2"
 pydocstyle = "^6.3.0"
 pre-commit = "^3.2.2"
+pytest-cov = "^4.0.0"
+coverage-badge = "^1.1.0"
 
 [tool.black]
 # https://github.com/psf/black
