--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,36 +1,52 @@
-default_language_version:
-  python: python3.9
-
-default_stages: [commit, push]
-
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.5.0
+-   repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.3.0
     hooks:
-      - id: check-yaml
-      - id: end-of-file-fixer
-        exclude: LICENSE
+    -   id: trailing-whitespace
+    -   id: end-of-file-fixer
+    -   id: check-yaml
+    -   id: check-added-large-files
+    -   id: check-byte-order-marker
+    -   id: check-case-conflict
+    -   id: check-json
+    -   id: mixed-line-ending
+    -   id: check-ast
+    -   id: check-merge-conflict
 
-  - repo: local
+-   repo: https://github.com/psf/black
+    rev: 23.3.0
     hooks:
-      - id: pyupgrade
-        name: pyupgrade
-        entry: poetry run pyupgrade --py37-plus
-        types: [python]
-        language: system
+    -   id: black
 
-  - repo: local
+-   repo: https://github.com/asottile/blacken-docs
+    rev: v1.12.1
+    hooks:
+    -   id: blacken-docs
+        additional_dependencies: [black]
+
+-   repo: https://github.com/timothycrosley/isort
+    rev: 5.10.1
     hooks:
       - id: isort
-        name: isort
-        entry: poetry run isort --settings-path pyproject.toml
-        types: [python]
-        language: system
+        args: ["--profile", "black", "--filter-files"]
 
-  - repo: local
+-   repo: https://github.com/pycqa/flake8
+    rev: 6.0.0
     hooks:
-      - id: black
-        name: black
-        entry: poetry run black --config pyproject.toml
-        types: [python]
-        language: system
+    - id: flake8
+      additional_dependencies:
+        - flake8-bugbear
+        - flake8-docstrings
+
+-   repo: https://github.com/asottile/pyupgrade
+    rev: v3.2.2
+    hooks:
+    -   id: pyupgrade
+        args: [--py37-plus]
+
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.991
+    hooks:
+    -   id: mypy
+        additional_dependencies:
+          - types-requests
