--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,10 @@ flake8-bugbear = "*"
 flake8-docstrings = "*"
 pytest-env = "*"
 types-requests = "*"
+mkdocs-material = "*"
+pillow = "*"
+cairosvg = "*"
+mkdocs-include-markdown-plugin = "*"
 
 [requires]
 python_version = "3.10"
