--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,11 +24,11 @@ repos:
     -   id: blacken-docs
         additional_dependencies: [black]
 
--   repo: https://github.com/timothycrosley/isort
-    rev: 5.10.1
-    hooks:
-      - id: isort
-        args: ["--profile", "black", "--filter-files"]
+# -   repo: https://github.com/timothycrosley/isort
+#     rev: 5.10.1
+#     hooks:
+#       - id: isort
+#         args: ["--profile", "black", "--filter-files"]
 
 -   repo: https://github.com/pycqa/flake8
     rev: 6.0.0
