--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,12 @@
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
+    rev: v6.0.0
     hooks:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-added-large-files
-    -   id: check-byte-order-marker
+    -   id: fix-byte-order-marker
     -   id: check-case-conflict
     -   id: check-json
     -   id: mixed-line-ending
@@ -14,24 +14,24 @@ repos:
     -   id: check-merge-conflict
 
 -   repo: https://github.com/psf/black
-    rev: 23.9.1
+    rev: 25.9.0
     hooks:
     -   id: black
 
 -   repo: https://github.com/asottile/blacken-docs
-    rev: 1.16.0
+    rev: 1.20.0
     hooks:
     -   id: blacken-docs
         additional_dependencies: [black]
 
 -   repo: https://github.com/timothycrosley/isort
-    rev: 5.12.0
+    rev: 6.1.0
     hooks:
       - id: isort
         args: ["--profile", "black", "--filter-files"]
 
 -   repo: https://github.com/pycqa/flake8
-    rev: 6.1.0
+    rev: 7.3.0
     hooks:
     - id: flake8
       additional_dependencies:
@@ -39,13 +39,13 @@ repos:
         - flake8-docstrings
 
 -   repo: https://github.com/asottile/pyupgrade
-    rev: v3.15.0
+    rev: v3.20.0
     hooks:
     -   id: pyupgrade
         args: [--py37-plus]
 
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.6.0
+    rev: v1.18.2
     hooks:
     -   id: mypy
         additional_dependencies:
