--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,52 +1,48 @@
+# See https://pre-commit.com for more information
+# See https://pre-commit.com/hooks.html for more hooks
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: 'https://github.com/pre-commit/pre-commit-hooks'
     rev: v6.0.0
     hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: check-yaml
-    -   id: check-added-large-files
-    -   id: fix-byte-order-marker
-    -   id: check-case-conflict
-    -   id: check-json
-    -   id: mixed-line-ending
-    -   id: check-ast
-    -   id: check-merge-conflict
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-yaml
+      - id: check-added-large-files
+        args:
+          - '--maxkb=100000'
+      - id: fix-byte-order-marker
+      - id: check-case-conflict
+      - id: check-json
+      - id: mixed-line-ending
+      - id: check-ast
+      - id: check-merge-conflict
 
--   repo: https://github.com/psf/black
-    rev: 25.9.0
+  - repo: 'https://github.com/astral-sh/ruff-pre-commit'
+    rev: v0.13.3
     hooks:
-    -   id: black
+      - id: ruff
+        args:
+          - '--fix'
+      - id: ruff-format
 
--   repo: https://github.com/asottile/blacken-docs
+  - repo: 'https://github.com/asottile/blacken-docs'
     rev: 1.20.0
     hooks:
-    -   id: blacken-docs
-        additional_dependencies: [black]
+      - id: blacken-docs
+        additional_dependencies:
+          - black
 
--   repo: https://github.com/timothycrosley/isort
-    rev: 6.1.0
-    hooks:
-      - id: isort
-        args: ["--profile", "black", "--filter-files"]
-
--   repo: https://github.com/pycqa/flake8
-    rev: 7.3.0
-    hooks:
-    - id: flake8
-      additional_dependencies:
-        - flake8-bugbear
-        - flake8-docstrings
-
--   repo: https://github.com/asottile/pyupgrade
+  - repo: 'https://github.com/asottile/pyupgrade'
     rev: v3.20.0
     hooks:
-    -   id: pyupgrade
-        args: [--py37-plus]
+      - id: pyupgrade
+        args:
+          - '--py37-plus'
 
--   repo: https://github.com/pre-commit/mirrors-mypy
+  - repo: 'https://github.com/pre-commit/mirrors-mypy'
     rev: v1.18.2
     hooks:
-    -   id: mypy
+      - id: mypy
         additional_dependencies:
+          - pydantic-settings
           - types-requests
