--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -94,6 +94,7 @@ jobs:
     strategy:
       matrix:
         python: ['3.10', '3.11', '3.12', '3.13']
+        max-parallel: 1
     steps:
       - name: Checkout
         uses: actions/checkout@v5
