feat: remove pre-commit-helper from VSCode extensions
Remove elagil.pre-commit-helper from recommended VSCode extensions list.
This streamlines the development environment setup by reducing the number
of required extensions while keeping essential tools (Python, Jupyter,
and Ruff) for the project.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,7 +2,6 @@
     "recommendations": [
         "ms-python.python",
         "ms-toolsai.jupyter",
-        "charliermarsh.ruff",
-        "elagil.pre-commit-helper"
+        "charliermarsh.ruff"
     ]
 }
