feat: add OOP chart API with type-safe enums and quick start guide
Add object-oriented chart creation interface with Pydantic validation and type-safe enums for better developer experience. This provides an alternative to the low-level API with IDE autocomplete support and runtime validation.

Changes:
- Add Quick Start section to README demonstrating OOP chart usage
- Export chart enums (NumberFormat, DateFormat, LineDash, etc.) from main package
- Add tooltip configuration fields to MultipleColumnChart
- Update .gitignore to exclude coverage reports and build artifacts
- Update dependencies (pytest-env 1.2.0, rich 14.2.0)

The OOP approach offers type safety, IDE autocomplete, and more readable code while maintaining flexibility to use low-level API calls when needed.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 .env
 chart.png
+coverage.xml
+_build_html
+_build
 
 # Created by https://www.gitignore.io/api/osx,python,pycharm,windows,visualstudio,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=osx,python,pycharm,windows,visualstudio,visualstudiocode
