feat: add py.typed marker for PEP 561 type hint support
Add py.typed marker file and include it in package data to indicate
that the datawrapper package supports type hints. This enables type
checkers like mypy to recognize and use the package's type annotations
when used as a dependency in other projects.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,6 +76,9 @@ Issues = "https://github.com/chekos/datawrapper/issues/"
 [tool.setuptools]
 packages = ["datawrapper"]
 
+[tool.setuptools.package-data]
+datawrapper = ["py.typed"]
+
 [tool.setuptools_scm]
 
 [tool.ruff]
