feat: add Typing :: Typed classifier to project metadata
Add the "Typing :: Typed" classifier to pyproject.toml to indicate
that this package includes type hints and supports static type checking.
This helps users and tools identify the package as type-aware.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ classifiers = [
     "Intended Audience :: Developers",
     "Operating System :: OS Independent",
     "Topic :: Software Development :: Libraries :: Python Modules",
+    "Typing :: Typed",
 ]
 
 [project.optional-dependencies]
